--- a/ss5_orm/bai_tap/xay_dung_ung_dung_nghe_nhac_don_gian/src/main/webapp/thymeleaf/edit.html
+++ b/ss5_orm/bai_tap/xay_dung_ung_dung_nghe_nhac_don_gian/src/main/webapp/thymeleaf/edit.html
@@ -10,23 +10,23 @@
 <form th:action="@{/music/edit}" method="post">
     <table border="1" th:object="${music}">
         <tr>
-            <td>Name song</td>
-            <td><input type="text" readonly th:field="*{nameSong}"></td>
+            <td><label for="name">Name</label></td>
+            <td><input id="name" type="text" readonly th:field="*{nameSong}"></td>
         </tr>
         <tr>
-            <td>Singer</td>
-            <td><input type="text" required th:field="*{singer}"></td>
+            <td><label for="singer">Singer</label></td>
+            <td><input id="singer" type="text" required th:field="*{singer}"></td>
         </tr>
         <tr>
-            <td>Type music</td>
-            <td><input type="text" required th:field="*{typeOfMusic}"></td>
+            <td><label for="type">Type music</label></td>
+            <td><input id="type" type="text" required th:field="*{typeOfMusic}"></td>
         </tr>
         <tr>
-            <td>Path</td>
-            <td><input type="text" required th:field="*{path}"></td>
+            <td><label for="path">Singer</label></td>
+            <td><input id="path" type="text" required th:field="*{path}"></td>
         </tr>
         <tr>
-            <td colspan="2"><button type="submit">Edit</button></td>
+            <td colspan="2" style="text-align: center"><button type="submit">Edit</button></td>
         </tr>
     </table>
 </form>
