--- a/ss5_orm/bai_tap/xay_dung_ung_dung_nghe_nhac_don_gian/src/main/webapp/thymeleaf/list.html
+++ b/ss5_orm/bai_tap/xay_dung_ung_dung_nghe_nhac_don_gian/src/main/webapp/thymeleaf/list.html
@@ -22,16 +22,21 @@
             <td th:text="*{nameSong}"></td>
             <td th:text="*{singer}"></td>
             <td th:text="*{typeOfMusic}"></td>
-            <td th:text="*{path}"></td>
+           <td>  <audio controls>
+               <source th:src="@{'/music/' + ${m.path}}" type="audio/ogg">
+               <source th:src="@{'/music/' + ${m.path}}" type="audio/mpeg">
+               Your browser does not support the audio element.
+           </audio>
+           </td>
             <td>
                 <a th:href="@{/music/view/{name}(name=*{nameSong})}">
                     <button>View</button>
                 </a>
                 <a th:href="@{/music/edit/{name}(name=*{nameSong})}">
-                    <button>View</button>
+                    <button>Edit</button>
                 </a>
                 <a th:href="@{/music/delete/{name}(name=*{nameSong})}">
-                    <button>View</button>
+                    <button>Delete</button>
                 </a>
             </td>
         </tr>
