--- a/ss5_orm/bai_tap/xay_dung_ung_dung_nghe_nhac_don_gian/src/main/webapp/thymeleaf/view.html
+++ b/ss5_orm/bai_tap/xay_dung_ung_dung_nghe_nhac_don_gian/src/main/webapp/thymeleaf/view.html
@@ -23,10 +23,12 @@
         </tr>
         <tr>
             <td>Path</td>
-            <td th:text="*{path}"></td>
-        </tr>
-        <tr>
-            <td colspan="2"><button type="submit">Edit</button></td>
+            <td>  <audio controls>
+                <source th:src="@{'/music/' + *{path}}" type="audio/ogg">
+                <source th:src="@{'/music/' + *{path}}" type="audio/mpeg">
+                Your browser does not support the audio element.
+            </audio>
+            </td>
         </tr>
     </table>
 </form>
